--- a/index.html
+++ b/index.html
@@ -319,6 +319,18 @@
 <script src="content.js"></script>
 <script src="game.js" defer></script>
 
+  <!-- Rodapé Gaveta de Fichas -->
+  <footer style="margin-top:40px;padding:20px 10px;text-align:center;font-weight:700;color:#2c5f8a">
+    <div style="margin-bottom:8px">📚 Recursos criados por Gaveta de Fichas</div>
+    <div style="display:flex;gap:16px;justify-content:center;flex-wrap:wrap">
+      <a href="https://gavetadefichas.blogspot.com/" target="_blank" style="color:#2c5f8a;text-decoration:none">
+        🌐 Blog Gaveta de Fichas
+      </a>
+      <a href="https://www.facebook.com/p/Gaveta-de-Fichas-100071380264004/" target="_blank" style="color:#2c5f8a;text-decoration:none">
+        👍 Página Facebook
+      </a>
+    </div>
+  </footer>
   <div class="gaveta-footer">
   <a href="https://gavetadefichas.blogspot.com/" target="_blank">📚 Gaveta de Fichas</a>
 </div>
